# aoc-rs

./: .gitignore  Cargo.toml  devenv.nix
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
y22/: Cargo.toml
y22/input/: test3  test9_3
y22/src/: day10.rs  day11.rs  day14.rs  day15.rs  day19.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day8.rs  day9.rs  main.rs
y23/: Cargo.toml
y23/src/1/: day1.rs
y23/src/10/: day10.rs
y23/src/11/: day11.rs
y23/src/12/: day12.rs
y23/src/13/: day13.rs
y23/src/15/: day15.rs
y23/src/16/: day16.rs
y23/src/17/: day17.rs
y23/src/19/: day19.rs
y23/src/2/: day2.rs
y23/src/3/: day3.rs
y23/src/4/: day4.rs
y23/src/8/: day8.rs
y23/src/9/: day9.rs
y23/src/template/: dayX.rs
y24/: Cargo.toml
y24/src/1/: day1.rs
y24/src/10/: day10.rs
y24/src/11/: day11.rs
y24/src/12/: day12.rs
y24/src/13/: day13.rs
y24/src/14/: day14.rs
y24/src/15/: day15_1.rs  day15_2.rs
y24/src/16/: day16.rs
y24/src/17/: day17.rs
y24/src/2/: day2.rs
y24/src/3/: day3.rs
y24/src/4/: day4.rs
y24/src/5/: day5.rs
y24/src/6/: day6.rs
y24/src/7/: day7.rs
y24/src/8/: day8.rs
y24/src/9/: day9.rs
y24/src/template/: dayX.rs
