[package]
name = "y24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"


[[bin]]
name = "day1"
path = "src/1/day1.rs"

[[bin]]
name = "day2"
path = "src/2/day2.rs"

[[bin]]
name = "day3"
path = "src/3/day3.rs"

[[bin]]
name = "day4"
path = "src/4/day4.rs"
