[package]
name = "y24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"


[[bin]]
name = "day1"
path = "src/1/day1.rs"

[[bin]]
name = "day2"
path = "src/2/day2.rs"

[[bin]]
name = "day3"
path = "src/3/day3.rs"

[[bin]]
name = "day4"
path = "src/4/day4.rs"

[[bin]]
name = "day5"
path = "src/5/day5.rs"

[[bin]]
name = "day6"
path = "src/6/day6.rs"

[[bin]]
name = "day7"
path = "src/7/day7.rs"

[[bin]]
name = "day8"
path = "src/8/day8.rs"

[[bin]]
name = "day9"
path = "src/9/day9.rs"

[[bin]]
name = "day10"
path = "src/10/day10.rs"

[[bin]]
name = "day11"
path = "src/11/day11.rs"

[[bin]]
name = "day12"
path = "src/12/day12.rs"

[[bin]]
name = "day13"
path = "src/13/day13.rs"
